--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testCompile('org.springframework.boot:spring-boot-starter-test')
     compile('org.projectlombok:lombok')
     compile "joda-time:joda-time:2.2"
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
