--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.projectlombok:lombok')
     compile "joda-time:joda-time:2.2"
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
